--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
@@ -31,12 +33,14 @@
     "react-native": "0.69.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-video": "^5.0.14",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "18.0.0",
